更新一下时间复杂度

--- a/监督学习/线性模型/普通最小二乘.ipynb
+++ b/监督学习/线性模型/普通最小二乘.ipynb
@@ -167,6 +167,13 @@
     "plt.plot(x, yhat)\n",
     "plt.scatter(x, y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意，这个算法的底层是SVD奇异值分解，复杂度是$O(n_{sample}{n_{feature}}^2)$"
+   ]
   }
  ],
  "metadata": {
